# openscraper

./: .gitignore  README.md  pyproject.toml
src/harvester/: cli.py  config.py  keyword_harvester.py  scraper.py  utils.py
